tests/fcode/errors/err_duplicate_argument_name.f90
subroutine dup(x, y, x)
  integer, intent(in) :: x
  real, intent(in) :: y
end subroutine dup
